--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,21 @@
+:root {
+    --font-family: Arial, Helvetica, sans-serif;
+    --secondary-color: #FCE9F1;
+    --text-color: #080202;
+    --button-color: #73BBC9;
+    --button-hover: #14889f;
+    --border-radius: 16px;
+
+    
+    /* --section-color: #F1D4E5; */
+}
+
 body {
-    margin: 0;
+    margin: 0 clamp(1rem, 4vw, 4rem);
     font-family: var(--font-family);
     background-color: var(--secondary-color);
     color: var(--text-color);
-    line-height: 1.6;
+    line-height: 1.6rem;
 }
 
 header {
@@ -19,6 +31,20 @@ nav {
     gap: 1rem;
 }
 
+a {
+    text-decoration: none;
+    
+    font-weight: bold;
+}
+
+a:link {
+    color: var(--button-color);
+}
+
+a:visited {
+    color: var(--button-hover)
+}
+
 .content-section {
     padding: 2rem;
     margin: 1rem auto;
@@ -28,18 +54,24 @@ nav {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+#color-box {
+    border-radius: var(--border-radius);
+}
+
 button {
-    background-color: green;
-    color: white;
+    background-color: var(--button-color);
+    color: var(--text-color);
     border: none;
     padding: 0.5rem 1rem;
     border-radius: var(--border-radius);
     cursor: pointer;
     transition: background-color 0.3s;
+    font-weight: bold;
 }
 
 button:hover {
-    background-color: darkgreen;
+    background-color: var(--button-hover);
+    color: white;
 }
 
 .hidden-info {
@@ -62,6 +94,7 @@ button:hover {
 form {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 0.5rem;
 }
 
