--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -52,13 +52,13 @@ h1 {
     font-size: 1.5rem;
 }
 
-#user-choice{
+/* #user-choice{
     display: none;
 }
 
 #flashcard{
     display: none;
-}
+} */
 
 form {
     display: flex;
