--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    justify-self: center;
+
 }
 :root {
     --font-family: Arial, Helvetica, sans-serif;
@@ -37,6 +39,8 @@ h1 {
     word-wrap: break-word;
     line-height: 3rem;
     padding: 3rem;
+    color: #a0214c;
+
 }
 
 #main{
@@ -51,14 +55,6 @@ h1 {
     color: rgb(60, 1, 1); 
     font-size: 1.5rem;
 }
-
-/* #user-choice{
-    display: none;
-}
-
-#flashcard{
-    display: none;
-} */
 
 form {
     display: flex;
@@ -83,6 +79,7 @@ button {
     transition: background-color 0.3s;
     font-weight: bold;
     width: 300px;
+    margin-top: 30px;
 }
 
 button:hover {
@@ -137,3 +134,29 @@ footer {
 #thank-you {
     display:none;
 }
+
+#message {
+    margin-top: 90px;
+}
+
+/* style for cat api */
+#cat-api  {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-style: ridge;
+    margin-top: 80px;
+    padding: 30px;
+}
+#catImg {
+    margin: 30px;
+}
+
+/* style for rhymes */
+#rhyme {
+    color: #a0214c;
+    text-align: center;
+    margin-bottom: 80px;
+    margin-top: 40px;
+}
+
