--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -100,6 +100,11 @@ footer {
     margin-top: 2rem;
 }
 
+#initial-page-selection{
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+}
 
 #card {
     display: flex;
@@ -160,3 +165,40 @@ footer {
     margin-top: 40px;
 }
 
+#translation-main{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 2rem;
+    width:100%;
+}
+
+.side-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    min-height: 300px;
+}
+
+.language {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.down-arrow {
+    width: 24px;
+    height: 24px;
+}
+
+.text-area textarea {
+   width:100%;
+   min-height: 180px;
+}
+
+.text-area-spanish{
+    width:100%;
+    min-height: 250px;
+    background-color: var(--button-color);
+}
